--- a/yazeed/Attendance.html
+++ b/yazeed/Attendance.html
@@ -4,175 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Attendance - MADRASATI</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: sans-serif;
-    }
-
-    html, body {
-      height: 100%;
-     
-    }
-
-    body {
-      display: flex;
-      background-color: #f1f2f6;
-    }
-
-    .wrapper {
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-      width: 100%;
-    }
-
-    /* Sidebar */
-    .sidebar {
-      width: 200px;
-      background: #2e2e2e;
-      color: white;
-      min-height: 100vh;
-      padding: 20px 10px;
-      position: fixed;
-      top: 0;
-      left: 0;
-    }
-
-    .user-info-row {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      padding: 10px;
-    }
-
-    .initials {
-      width: 35px;
-      height: 35px;
-      background-color: #CDCDCD;
-      color: #1F1F1F;
-      font-size: 14px;
-      font-weight: bold;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-transform: uppercase;
-      flex-shrink: 0;
-    }
-
-    .user_name {
-      font-size: 14px;
-      font-weight: 500;
-      color: white;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
-
-    .nav {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-      margin-top: 20px;
-    }
-
-    .nav-btn {
-      background-color: transparent;
-      color: #fff;
-      border: none;
-      padding: 10px;
-      text-align: left;
-      font-size: 14px;
-      cursor: pointer;
-      border-radius: 5px;
-      transition: background-color 0.2s ease;
-    }
-
-    .nav-btn:hover {
-      background-color: rgba(255, 255, 255, 0.1);
-    }
-
-    .nav-btn .new {
-      background: red;
-      color: white;
-      font-size: 10px;
-      padding: 2px 6px;
-      border-radius: 10px;
-      float: right;
-    }
-
-    /* Topbar */
-    .topbar {
-      position: fixed;
-      left: 200px;
-      right: 0;
-      top: 0;
-      height: 60px;
-      background-color: #fff;
-      padding: 0 30px;
-      box-sizing: border-box;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      border-bottom: 1px solid #ccc;
-      z-index: 999;
-    }
-
-    .logo-area {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-    }
-
-    .logo-area img {
-      width: 40px;
-      height: 40px;
-      object-fit: contain;
-    }
-
-    /* Main Content */
-    .main-content {
-      flex: 1;
-      padding: 20px;
-      margin-left: 200px;
-      margin-top: 60px;
-    }
-
-    .main-content h2 {
-      margin-bottom: 15px;
-    }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      background-color: white;
-    }
-
-    th, td {
-      padding: 12px;
-      border: 1px solid #ccc;
-      text-align: left;
-    }
-
-    th {
-      background-color: #f5f5f5;
-      font-weight: bold;
-    }
-
-    /* Footer */
-    .footer {
-      font-size: 12px;
-      color: #777;
-      text-align: center;
-      padding: 10px;
-      border-top: 1px solid #ccc;
-      background-color: white;
-      margin-left: 200px;
-    }
-  </style>
+  <link rel="stylesheet" href="Attendance.css">
 </head>
 <body>
   <!-- Sidebar -->
@@ -196,7 +28,7 @@
     <div class="topbar">
       <span>Contact</span>
       <div class="logo-area">
-        <img src="./pic/logo3.jpeg" alt="Logo" />
+        <img src="/project/pic/logo3.jpeg" alt="Logo" />
         <h1>MADRASATI</h1>
       </div>
     </div>
