--- a/yazeed/Attendance.html
+++ b/yazeed/Attendance.html
@@ -8,19 +8,21 @@
 </head>
 <body>
   <!-- Sidebar -->
-  <div class="sidebar">
-    <div class="user-info-row">
-      <div class="initials">SA</div>
-      <span class="user_name">Student Name</span>
-    </div>
-    <hr>
-    <div class="nav">
-      <button class="nav-btn">Dashboard <span class="new">New</span></button>
-      <button class="nav-btn">Grades</button>
-      <button class="nav-btn">Subject</button>
-      <button class="nav-btn">Attendance <span class="new">New</span></button>
-    </div>
+  <!-- Sidebar -->
+<div class="sidebar">
+  <div class="user-info-row">
+    <div class="initials">SA</div>
+    <span class="user_name">Student Name</span>
   </div>
+  <hr>
+  <div class="nav">
+    <button class="nav-btn">📊 Dashboard <span class="new">New</span></button>
+    <button class="nav-btn">📈 Grades</button>
+    <button class="nav-btn">📚 Subject</button>
+    <button class="nav-btn">📝 Attendance <span class="new">New</span></button>
+  </div>
+</div>
+
 
   <!-- Wrapper: Contains Topbar, Content, and Footer -->
   <div class="wrapper">
@@ -35,7 +37,7 @@
 
     <!-- Main Content -->
     <div class="main-content">
-      <h2>Attendance</h2>
+      <h2>📝 Attendance</h2>
       <table>
         <thead>
           <tr>
@@ -57,7 +59,7 @@
 
     <!-- Footer -->
     <div class="footer">
-      Copyright © 2025–present MADRASATI. All rights reserved.
+      Copyright © 2025–present <strong> MADRASATI</strong>. All rights reserved.
     </div>
   </div>
 </body>
