--- a/yazeed/Subject.html
+++ b/yazeed/Subject.html
@@ -3,47 +3,55 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Madrasati - Subjects</title>
+  <title>Subjects - MADRASATI</title>
   <link rel="stylesheet" href="Subject.css" />
 </head>
 <body>
-  <div class="container">
-    <aside class="sidebar">
-      <div class="profile">
-        <div class="avatar">SN</div>
-        <div class="name">Student Name</div>
-      </div>
-      <nav>
-        <ul>
-          <li><a href="#">📊 Dashboard <span class="new">New</span></a></li>
-          <li><a href="#">📈 Grades</a></li>
-          <li><a href="#">📚 Subject</a></li>
-          <li><a href="#">📝 Attendance <span class="new">New</span></a></li>
-        </ul>
-      </nav>
-    </aside>
-    <main class="main-content">
-      <header class="header">
-        <div class="menu">☰ Contact</div>
+  <!-- Sidebar -->
+  <div class="sidebar">
+    <div class="user-info-row">
+      <div class="initials">SA</div>
+      <span class="user_name">Student Name</span>
+    </div>
+    <hr>
+    <div class="nav">
+      <button class="nav-btn">📊 Dashboard <span class="new">New</span></button>
+      <button class="nav-btn">📈 Grades</button>
+      <button class="nav-btn">📚 Subject</button>
+      <button class="nav-btn">📝 Attendance <span class="new">New</span></button>
+    </div>
+  </div>
+
+  <!-- Wrapper -->
+  <div class="wrapper">
+    <!-- Topbar -->
+    <div class="topbar">
+      <span>Contact</span>
+      <div class="logo-area">
+        <img src="/pic/logo3.jpeg" alt="Logo" />
         <h1>MADRASATI</h1>
-      </header>
-      <section class="subjects">
-        <h2>Subjects</h2>
-        <div class="subjects-grid">
-          <div class="card">Arabic</div>
-          <div class="card">English</div>
-          <div class="card">Math</div>
-          <div class="card">Science</div>
-          <div class="card">History</div>
-          <div class="card">Computer</div>
-          <div class="card">Art</div>
-          <div class="card">Sport</div>
-        </div>
-      </section>
-      <footer class="footer">
-        &copy; 2025-present <strong>MADRASATI</strong>. All rights reserved.
-      </footer>
-    </main>
+      </div>
+    </div>
+
+    <!-- Main Content -->
+    <div class="main-content">
+      <h2>📚 Subjects</h2>
+      <div class="subjects-grid">
+        <div class="card">Arabic</div>
+        <div class="card">English</div>
+        <div class="card">Math</div>
+        <div class="card">Science</div>
+        <div class="card">History</div>
+        <div class="card">Computer</div>
+        <div class="card">Art</div>
+        <div class="card">Sport</div>
+      </div>
+    </div>
+
+    <!-- Footer -->
+    <div class="footer">
+      Copyright © 2025–present <strong> MADRASATI</strong>. All rights reserved.
+    </div>
   </div>
 
   <script>
