--- a/yazeed/contect.html
+++ b/yazeed/contect.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Student Contact</title>
   <link rel="stylesheet" href="contect.css">
-  
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="sidebar">
@@ -16,10 +16,10 @@
     <hr>
 
     <div class="nav">
-      <button class="nav-btn">Dashboard <span class="new">New</span></button>
-      <button class="nav-btn">Grades</button>
-      <button class="nav-btn">Subject</button>
-      <button class="nav-btn">Attendance <span class="new">New</span></button>
+      <button class="nav-btn">📊 Dashboard <span class="new">New</span></button>
+      <button class="nav-btn">📈 Grades</button>
+      <button class="nav-btn">📚 Subject</button>
+      <button class="nav-btn">📝 Attendance <span class="new">New</span></button>
     </div>
   </div>
 
@@ -27,47 +27,47 @@
     <div class="topbar">
       <span>Contact</span>
       <div class="logo-area">
-        <img src="/project/pic/logo3.jpeg" alt="Logo">
+        <img src="/pic/logo3.jpeg" alt="Logo">
         <h1>MADRASATI</h1>
       </div>
     </div>
 
     <div class="contact-section">
-      <h2>Contact</h2>
+      <h2>📞 Get in Touch</h2>
       <div class="contact-cards">
-        <div class="card">
+        <div class="card teacher">
           <img src="https://img.icons8.com/ios/50/teacher.png" alt="Teacher Icon">
-          <h3>Teacher</h3>
+          <h3>👩‍🏫 Teacher</h3>
           <table>
-            <tr><td><strong>Phone</strong></td><td><a href="tel:0799999999">0799999999</a></td></tr>
-            <tr><td><strong>Email</strong></td><td><a href="mailto:Email@domain.com">Email@domain.com</a></td></tr>
+            <tr><td><strong>Phone:</strong></td><td><a href="tel:0799999999">0799999999</a></td></tr>
+            <tr><td><strong>Email:</strong></td><td><a href="mailto:Email@domain.com">Email@domain.com</a></td></tr>
           </table>
         </div>
 
-        <div class="card">
+        <div class="card school">
           <img src="https://img.icons8.com/ios/50/school.png" alt="School Icon">
-          <h3>School</h3>
+          <h3>🏫 School</h3>
           <table>
-            <tr><td><strong>Phone</strong></td><td><a href="tel:0799999999">0799999999</a></td></tr>
-            <tr><td><strong>Email</strong></td><td><a href="mailto:Email@domain.com">Email@domain.com</a></td></tr>
-            <tr><td><strong>URL</strong></td><td><a href="https://www.madrasati.com">www.madrasati.com</a></td></tr>
-            <tr><td><strong>Location</strong></td><td><a href="#">School Location click to see direction</a></td></tr>
+            <tr><td><strong>Phone:</strong></td><td><a href="tel:0799999999">0799999999</a></td></tr>
+            <tr><td><strong>Email:</strong></td><td><a href="mailto:Email@domain.com">Email@domain.com</a></td></tr>
+            <tr><td><strong>URL:</strong></td><td><a href="https://www.madrasati.com">www.madrasati.com</a></td></tr>
+            <tr><td><strong>Location:</strong></td><td><a href="#">School Location 📍</a></td></tr>
           </table>
         </div>
 
-        <div class="card">
+        <div class="card admin">
           <img src="https://img.icons8.com/ios/50/administrator-male.png" alt="Admin Icon">
-          <h3>Admin</h3>
+          <h3>🧑‍💼 Admin</h3>
           <table>
-            <tr><td><strong>Phone</strong></td><td><a href="tel:0799999999">0799999999</a></td></tr>
-            <tr><td><strong>Email</strong></td><td><a href="mailto:Email@domain.com">Email@domain.com</a></td></tr>
+            <tr><td><strong>Phone:</strong></td><td><a href="tel:0799999999">0799999999</a></td></tr>
+            <tr><td><strong>Email:</strong></td><td><a href="mailto:Email@domain.com">Email@domain.com</a></td></tr>
           </table>
         </div>
       </div>
     </div>
 
     <div class="footer">
-      Copyright © 2025–present MADRASATI. All rights reserved.
+      © 2025–present <strong>MADRASATI</strong>. All rights reserved.
     </div>
   </div>
 </body>
