--- a/yazeed/Subject2.html
+++ b/yazeed/Subject2.html
@@ -4,21 +4,21 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Subject - MADRASATI</title>
-  <link rel="stylesheet" href="Subject.css">
+  <link rel="stylesheet" href="subject.css">
 </head>
 <body>
   <!-- Sidebar -->
   <div class="sidebar">
     <div class="user-info-row">
       <div class="initials">SN</div>
-      <span class="user_name">Student Name</span>
+      <a href="profil.html" class="user_name">Student Name</a>
     </div>
     <hr>
     <div class="nav">
-      <button class="nav-btn">📊 Dashboard <span class="new">New</span></button>
-      <button class="nav-btn">📈 Grades</button>
-      <button class="nav-btn">📚 Subject</button>
-      <button class="nav-btn">📝 Attendance <span class="new">New</span></button>
+      <a href="dashboard_page.html" class="nav-btn">📊 Dashboard <span class="new">New</span></a>
+      <a href="grades.html" class="nav-btn">📈 Grades</a>
+      <a href="subject.html" class="nav-btn">📚 Subject</a>
+      <a href="attendance.html" class="nav-btn">📝 Attendance <span class="new">New</span></a>
     </div>
   </div>
 
@@ -26,7 +26,7 @@
   <div class="wrapper">
     <!-- Topbar -->
     <div class="topbar">
-      <span>Contact</span>
+      <a href="contect.html" class="topbar-link">Contact</a>
       <div class="logo-area">
         <img src="/pic/logo3.jpeg" alt="Logo" />
         <h1>MADRASATI</h1>
