--- a/yazeed/contect.html
+++ b/yazeed/contect.html
@@ -10,22 +10,23 @@
 <body>
   <div class="sidebar">
     <div class="user-info-row">
-      <div class="initials">SA</div>
-      <span class="user-name">Student Name</span>
+      <div class="initials">SN</div>
+      <a href="profil.html" class="user_name">Student Name</a>
     </div>
     <hr>
 
     <div class="nav">
-      <button class="nav-btn">📊 Dashboard <span class="new">New</span></button>
-      <button class="nav-btn">📈 Grades</button>
-      <button class="nav-btn">📚 Subject</button>
-      <button class="nav-btn">📝 Attendance <span class="new">New</span></button>
+      <a href="dashboard_page.html" class="nav-btn">📊 Dashboard <span class="new">New</span></a>
+      <a href="grades.html" class="nav-btn">📈 Grades</a>
+      <a href="subject.html" class="nav-btn">📚 Subject</a>
+      <a href="attendance.html" class="nav-btn">📝 Attendance <span class="new">New</span></a>
     </div>
+    
   </div>
 
   <div class="main-content">
     <div class="topbar">
-      <span>Contact</span>
+      <a href="contect.html" class="topbar-link">Contact</a>
       <div class="logo-area">
         <img src="/pic/logo3.jpeg" alt="Logo">
         <h1>MADRASATI</h1>
@@ -37,7 +38,7 @@
       <div class="contact-cards">
         <div class="card teacher">
           <img src="https://img.icons8.com/ios/50/teacher.png" alt="Teacher Icon">
-          <h3>👩‍🏫 Teacher</h3>
+          <h3> Teacher</h3>
           <table>
             <tr><td><strong>Phone:</strong></td><td><a href="tel:0799999999">0799999999</a></td></tr>
             <tr><td><strong>Email:</strong></td><td><a href="mailto:Email@domain.com">Email@domain.com</a></td></tr>
@@ -46,7 +47,7 @@
 
         <div class="card school">
           <img src="https://img.icons8.com/ios/50/school.png" alt="School Icon">
-          <h3>🏫 School</h3>
+          <h3>School</h3>
           <table>
             <tr><td><strong>Phone:</strong></td><td><a href="tel:0799999999">0799999999</a></td></tr>
             <tr><td><strong>Email:</strong></td><td><a href="mailto:Email@domain.com">Email@domain.com</a></td></tr>
@@ -57,7 +58,7 @@
 
         <div class="card admin">
           <img src="https://img.icons8.com/ios/50/administrator-male.png" alt="Admin Icon">
-          <h3>🧑‍💼 Admin</h3>
+          <h3>Admin</h3>
           <table>
             <tr><td><strong>Phone:</strong></td><td><a href="tel:0799999999">0799999999</a></td></tr>
             <tr><td><strong>Email:</strong></td><td><a href="mailto:Email@domain.com">Email@domain.com</a></td></tr>
