--- a/yazeed/grades.html
+++ b/yazeed/grades.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head>  
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Student Grades</title>
@@ -8,33 +8,43 @@
 </head>
 <body>
   <div class="container">
+    <!-- ✅ Sidebar -->
     <div class="sidebar">
       <div class="user-info-row">
         <div class="initials">SN</div>
-        <span class="user_name">Student Name</span>
+        <a href="profil.html" class="user_name">Student Name</a>
       </div>
       <hr>
       <div class="nav">
-        <button class="nav-btn">📊 Dashboard <span class="new">New</span></button>
-        <button class="nav-btn">📈 Grades</button>
-        <button class="nav-btn">📚 Subject</button>
-        <button class="nav-btn">📝 Attendance <span class="new">New</span></button>
+        <a href="dashboard_page.html" class="nav-btn">📊 Dashboard <span class="new">New</span></a>
+        <a href="grades.html" class="nav-btn">📈 Grades</a>
+        <a href="subject.html" class="nav-btn">📚 Subject</a>
+        <a href="attendance.html" class="nav-btn">📝 Attendance <span class="new">New</span></a>
       </div>
     </div>
 
     <main class="content">
-      <header class="header">
-        <div class="menu">Contact</div>
-        <h1>MADRASATI</h1>
-      </header>
+      <!-- ✅ Topbar -->
+      <div class="topbar">
+        <button class="sidebar-toggle" onclick="toggleSidebar()">☰</button>
+        <div class="logo-area">
+          <img src="/pic/logo3.jpeg" alt="Logo" />
+          <h1>MADRASATI</h1>
+        </div>
+        <a href="contect.html" class="topbar-link">Contact</a>
+      </div>
 
+      <!-- ✅ Grades Section -->
       <section class="grades-section">
         <h2>📈 Grades</h2>
         <div class="filters">
           <div>
             <label for="year">Select the year</label><br>
             <select id="year">
-              <option>Select</option>
+              <option value="">Select</option>
+              <option value="2023">2023</option>
+              <option value="2024">2024</option>
+              <option value="2025">2025</option>
             </select>
           </div>
           <div>
@@ -69,10 +79,28 @@
         </div>
       </section>
 
+      <!-- ✅ Footer -->
       <footer class="footer">
         &copy; 2025–present <strong>MADRASATI</strong>. All rights reserved.
       </footer>
     </main>
   </div>
+
+  <!-- ✅ Script -->
+  <script>
+    document.getElementById("year").addEventListener("change", function () {
+      const selectedYear = this.value;
+      if (selectedYear && parseInt(selectedYear) < 2025) {
+        window.location.href = "grades2.html";
+      }
+    });
+
+    function toggleSidebar() {
+      const sidebar = document.querySelector('.sidebar');
+      const body = document.body;
+      sidebar.classList.toggle('open');
+      body.classList.toggle('sidebar-open');
+    }
+  </script>
 </body>
 </html>
