--- a/yazeed/grades2.html
+++ b/yazeed/grades2.html
@@ -10,21 +10,21 @@
 
   <div class="sidebar">
     <div class="user-info-row">
-      <div class="initials">SA</div>
-      <span class="user-name">Student Name</span>
+      <div class="initials">SN</div>
+      <a href="profil.html" class="user_name">Student Name</a>
     </div>
     <hr />
     <div class="nav">
-      <button class="nav-btn">📊 Dashboard <span class="new">New</span></button>
-      <button class="nav-btn">📈 Grades</button>
-      <button class="nav-btn">📚 Subject</button>
-      <button class="nav-btn">📝 Attendance <span class="new">New</span></button>
+      <a href="dashboard_page.html" class="nav-btn">📊 Dashboard <span class="new">New</span></a>
+      <a href="grades.html" class="nav-btn">📈 Grades</a>
+      <a href="subject.html" class="nav-btn">📚 Subject</a>
+      <a href="attendance.html" class="nav-btn">📝 Attendance <span class="new">New</span></a>
     </div>
   </div>
 
   <div class="main-content">
     <div class="topbar">
-      <span>Contact</span>
+      <a href="contect.html" class="topbar-link"> Contact</a>
       <div class="logo-area">
         <img src="/pic/logo3.jpeg" alt="Logo" />
         <h1>MADRASATI</h1>
